spade-tests/src/snapshots/spade_tests__typeinference__transmute_from_inv_wire_container_is_disallowed.snap
---
source: spade-tests/src/typeinference.rs
---
struct Container {
    m: inv bool,
    r: bool
}

fn test(a: Container) -> bool {
    unsafe { std::conv::transmute(a) }
}


error: Type inv size mismatch. Attempting to transmute 1 bit to 0 bits
  ┌─ testinput:7:14
  │
7 │     unsafe { std::conv::transmute(a) }
  │              ^^^^^^^^^^^^^^^^^^^^^^^
  │              │                    │
  │              │                    The source has 1 bit inverted bits
  │              The output type has 0 bits inverted bits
  │
  = note: transmute can only convert between types of identical size
